/*
 * Copyright (C) 2021 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto2";
package com.android.server.criticalevents;

option java_multiple_files = true;

// Output proto containing recent critical events for inclusion in logs such as ANR files.
// Do not change the field names since this data is dumped to ANR files in textproto format.
message CriticalEventLogProto {
  // Timestamp when the log snapshot was generated.
  // Required.
  optional int64 timestamp_ms = 1;

  // Max age of events that are included in this proto.
  // Required.
  optional int32 window_ms = 2;

  // Max number of events in the log.
  // Note: if the number of events is equal to the capacity then it is likely the actual time range
  // covered by the log is shorter than window_ms.
  // Required.
  optional int32 capacity = 3;

  // Recent critical events.
  repeated CriticalEventProto events = 4;
}

// On-disk storage of events.
message CriticalEventLogStorageProto {
  repeated CriticalEventProto events = 1;
}

// A "critical" event such as an ANR or watchdog.
// Do not change the field names since this data is dumped to ANR files in textproto format.
message CriticalEventProto {
  // Timestamp of the event.
  // Required.
  optional int64 timestamp_ms = 1;

  // Required.
  oneof event {
    Watchdog watchdog = 2;
    HalfWatchdog half_watchdog = 3;
  }

  message Watchdog {
    // The watchdog subject.
    // Required.
    optional string subject = 1;

    // Unique identifier of the watchdog.
    // Can be used to join with other data for this watchdog such as stack dumps & perfetto traces.
    // Generated in {@link com.android.server.Watchdog#run}.
    // Required.
    optional string uuid = 2;
  }

  message HalfWatchdog {
    // The half-watchdog subject.
    // Required.
    optional string subject = 1;
  }
}